--- a/src/main/resources/gcs.properties
+++ b/src/main/resources/gcs.properties
@@ -1,3 +1,4 @@
-projectId=keen-mission-374307
-credentials=C:\\Users\\zzser\\.gcs\\keen-mission-374307-72d817f1d437.json
-bucketName=momentary.live
+projectId=${projectId}
+# only use in local dev
+credentials=${credentials_file_path}
+bucketName=${bucketName}
